# memegeom

./: .pre-commit-config.yaml  Cargo.toml  Justfile
src/: lib.rs  tf.rs
src/geom/: bounds.rs  contains.rs  convex.rs  distance.rs  intersects.rs  math.rs
src/geom/qt/: quadtree.rs  query.rs
src/primitive/: capsule.rs  circle.rs  compound.rs  line_shape.rs  mod.rs  path_shape.rs  point.rs  polygon.rs  rect.rs  segment.rs  shape.rs  triangle.rs
tests/: integration.rs
