[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["graphics", "data-structures", "algorithms"]
description = "computational geometry library"
edition = "2024"
keywords = ["compgeom", "geometry"]
license = "MIT OR Apache-2.0"
name = "memegeom"
repository = "https://github.com/Edgeworth/memegeom"
version = "0.1.0"

[dependencies]
ahash = "0.8.12"
approx = "0.5.1"
auto_ops = "0.3.0"
derive_more = {version = "2.1.1", features = ["display"]}
earcutr = "0.5.0"
nalgebra = "0.34.1"
ordered-float = "5.1.0"
rust-dense-bitset = "0.1.1"
serde = {version = "1.0.228", features = ["derive"]}
smallvec = "1.15.1"
thiserror = "2.0"

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
rand = {version = "0.9.2", features = ["small_rng"]}
